# StudentsManageSystem

./: README.md
msvc/: CMakeLists.txt  StudentsManageSystem2017.sln
msvc/Release/: StudentsManageSystem.ipdb  test.db
msvc/vs2017/: CMakeLists.txt  StudentsManageSystem.rc  StudentsManageSystem.vcxproj  StudentsManageSystem.vcxproj.filters  resource.h
msvc/vs2017/Release/Students.8E772E1C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StudentsManageSystem.lastbuildstate  StudentsManageSystem.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: StudentsManageSystem.cpp  StudentsManageSystem.h
